src/stylus/blocks/callback.styl
.callback
  position fixed
  top 0
  left 0
  width 100%
  height 100vh
  display none
  opacity 0
  justify-content: center
  align-items: center
  background-color #0F0F17
  z-index: 20
  transition: .5s
  &__title
    color: #ffffff;
    font-family: Lato;
    font-size: 30px;
    white-space: nowrap
    align-self: center
    &:before
      content '\f095'
      font-family: FontAwesome
      color secondColor
      margin-right 10px
  &__content
    height 40%
    width 440px
    display flex
    flex-direction: column
    justify-content: space-between
    align-items: flex-end
  &__input
    width 100%
    border none
    border-bottom: 2px solid #3c3c49;
    background-color transparent
    padding 16px
    color: #656574;
    font-family: Lato;
    font-size: 18px;
    font-weight: 700;
    &::placeholder
      color #656574
  &__close
    position absolute
    top 12px
    right 24px
    border none
    background-color transparent
    color gray
    font-size 50px
    cursor pointer
.callback__close img
  width 50px

